log
Wed 24 Apr 2024 09:43:32 PM UTC: 
 tests:  0|6
total_score: 0/70
dcf9f75
Fri 26 Apr 2024 05:03:54 AM UTC: 
 hashmap.c | 33 +++++++++++++++++++++++++++++----
 1 file changed, 29 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:20: error: ‘Pair’ has no member named ‘next’
   63 |         par2 = par2->next;
      |                    ^~
hashmap.c:65:11: error: ‘Pair’ has no member named ‘next’
   65 |       par2->next = par;
      |           ^~
Compilation failed
80ceddc
Fri 26 Apr 2024 05:21:47 AM UTC: 
 hashmap.c | 24 +++++-------------------
 1 file changed, 5 insertions(+), 19 deletions(-)
 tests:  4|5
total_score: 20/70
8ff31ec
Fri 26 Apr 2024 05:33:00 AM UTC: 
 hashmap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
32d4e5b
Fri 26 Apr 2024 05:46:45 AM UTC: 
 hashmap.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccAkU0O9.o: in function `search_test1':
test.c:(.text+0xc42): undefined reference to `searchMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccAkU0O9.o: in function `search_test2':
test.c:(.text+0xd03): undefined reference to `searchMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccAkU0O9.o: in function `search_test3':
test.c:(.text+0xd87): undefined reference to `searchMap'
collect2: error: ld returned 1 exit status
Compilation failed
9709205
Fri 26 Apr 2024 05:46:58 AM UTC: 
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccdI8siS.o: in function `search_test1':
test.c:(.text+0xc42): undefined reference to `searchMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccdI8siS.o: in function `search_test2':
test.c:(.text+0xd03): undefined reference to `searchMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccdI8siS.o: in function `search_test3':
test.c:(.text+0xd87): undefined reference to `searchMap'
collect2: error: ld returned 1 exit status
Compilation failed
68223ff
Fri 26 Apr 2024 05:50:42 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccBxJpjQ.o: in function `search_test1':
test.c:(.text+0xcc2): undefined reference to `searchMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccBxJpjQ.o: in function `search_test2':
test.c:(.text+0xd83): undefined reference to `searchMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccBxJpjQ.o: in function `search_test3':
test.c:(.text+0xe07): undefined reference to `searchMap'
collect2: error: ld returned 1 exit status
Compilation failed
7c7faa2
Fri 26 Apr 2024 05:51:40 AM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  8|3
total_score: 40/70
5525b74
Fri 26 Apr 2024 05:52:11 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  8|3
total_score: 40/70
ee22bc1
